--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
+      background-color: #01j8dd;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
